syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "ChatMonitorPackage";
package ChatMonitorPackage;

message InformationMessage 
{
  int32 id = 1;
  string from = 2;
  string to = 3;
  string text = 4;
  int64 timestamp = 5;
}

message SubscribeRequest 
{
  string client_id = 1;
}

message PingReply 
{
  bool success = 1;
}

message Message 
{
  InformationMessage message = 1;
}

service MessageBroadcastService 
{
	rpc Subscribe(SubscribeRequest) returns (stream InformationMessage);
	rpc Ping (google.protobuf.Empty) returns (PingReply);	 
}


